[package]
name = "jh7110-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
bitfield = "0.17.0"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
heapless = "0.7.17"
nb = "1.1.0"
paste = "1.0.15"
jh7110-pac = {path = "../jh7110-pac/"}

[dependencies.critical-section]
version = "1.1.3"
optional = true

[dependencies.riscv]
version = "0.12.0"

[dependencies.panic-halt]
version = "0.2.0"
optional = true

[dependencies.riscv-rt]
version = "0.13.0"
optional = true

[dev-dependencies.defmt]
version = "0.3"

[dev-dependencies.defmt-test]
version = "0.3"

[features]
default = ["4G"]
rt = ["critical-section/restore-state-bool", "jh7110-pac/rt", "riscv-rt"]
rts = ["rt", "jh7110-pac/rts", "riscv-rt/s-mode"]
2G = []
4G = []
8G = []
